--- a/projects_02/.github/workflows/ci-cd.yml
+++ b/projects_02/.github/workflows/ci-cd.yml
@@ -1,33 +1,33 @@
-name: CI_CD Pipeline
+name: CI-CD Pipeline
 
 on:
-  Push:
-    branch:
-      -main
+  push:
+    branches:
+      - main
 
 jobs:
   build-test-deploy:
-    runs-on: unbuntu-latest
+    runs-on: ubuntu-latest
 
-  steps:
-    -name: Checkout code
-    uses: actions/Checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/Checkout@v4
 
-    -name: Set up Python
-    uses: actions/setup-python@v5
-    with:
-      python-version: '3.10'
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with: 
+          python-version: '3.10'
 
-    -name: Install dependencies
-    run: |
-      pip install -r requirements.txt
+      - name: Install dependencies
+        run: | 
+          pip install -r requirements.txt
 
-    -name: Run tests
-    run: |
-      pytest
+      - name: Run tests
+        run: |
+          pytest
 
-    -name: Deploy to test environment
-    run: |
-      echo "Deploying application..."
-      mkdir -p /tmp/test-deploy
-      cp app.py /tmp/test-deploy/
+      - name: Deploy to test environment
+        run: |
+          echo "Deploying application..."
+          mkdir -p /tmp/test-deploy
+          cp app.py /tmp/test-deploy/
